[gd_scene load_steps=7 format=3 uid="uid://je5vem4uod1j"]

[ext_resource type="Script" path="res://GeneralAssets/caja.gd" id="1_437bl"]
[ext_resource type="Texture2D" uid="uid://35yuceg4u5in" path="res://3.png" id="2_1vrfj"]
[ext_resource type="PackedScene" uid="uid://d155mtg2nv5ig" path="res://Components/Dragging_VFX.tscn" id="3_bc3t0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_k34fp"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8pu3"]
size = Vector2(36, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbyi3"]
size = Vector2(38, 36)

[node name="Caja" type="RigidBody2D" groups=["Cajas"]]
collision_layer = 8
collision_mask = 27
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_k34fp")
script = ExtResource("1_437bl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e8pu3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4.76837e-07)
scale = Vector2(0.0734375, 0.0714844)
texture = ExtResource("2_1vrfj")

[node name="GPUParticles2D" parent="." instance=ExtResource("3_bc3t0")]
position = Vector2(-19, 19)
emitting = false
amount = 15
lifetime = 0.5

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_dbyi3")

[node name="PlayerTpPosition" type="Marker2D" parent="."]
position = Vector2(0, -47)

[node name="Delay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Delay" to="." method="_on_delay_timeout"]
